FBU2 Psadise nochmal ...

--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -208,7 +208,7 @@
       <h2>👥 Über uns</h2>
       <div class="about-info-box">
         <b>Pasadise Network – Ein Server von Spielern, für Spieler.</b><br>
-        Pasadise Network ist weit mehr als nur ein Minecraft-Freebuildserver – wir sind eine wachsende, kreative Community mit dem Ziel, einen Ort zu schaffen, an dem sich Spieler aller Altersgruppen wohlfühlen, austauschen und langfristig verwirklichen können.<br><br>
+        Paradise Network ist weit mehr als nur ein Minecraft-Freebuildserver – wir sind eine wachsende, kreative Community mit dem Ziel, einen Ort zu schaffen, an dem sich Spieler aller Altersgruppen wohlfühlen, austauschen und langfristig verwirklichen können.<br><br>
         Gegründet wurde der Server aus dem Wunsch heraus, eine echte Alternative zu überladenen, kommerziellen Minecraft-Servern zu schaffen. Statt Pay-to-Win, Rangkämpfe und toxischem Verhalten findest du bei uns eine freundliche Atmosphäre, faire Regeln und vor allem: kreative Freiheit.
       </div>
       <div class="about-info-box vision">
@@ -223,7 +223,7 @@
       </div>
       <div class="about-info-box team">
         <b>🧑‍💻 Wer steckt dahinter?</b><br>
-        Hinter Pasadise Network steht ein kleines, aber engagiertes Team aus Minecraft-Fans mit Erfahrung in Servertechnik, Community-Management und kreativem Weltenbau. Alles, was wir machen, machen wir mit Leidenschaft – ehrenamtlich und aus Überzeugung.<br>
+        Hinter Paradise Network steht ein kleines, aber engagiertes Team aus Minecraft-Fans mit Erfahrung in Servertechnik, Community-Management und kreativem Weltenbau. Alles, was wir machen, machen wir mit Leidenschaft – ehrenamtlich und aus Überzeugung.<br>
         <br>
         Unser Team kümmert sich um:
         <ul>
@@ -246,7 +246,7 @@
       </div>
       <div style="color:#388e3c; font-weight:bold; font-size:1.08rem; margin-bottom:2.2rem;">
         Danke, dass du Teil dieser Welt bist – oder es bald wirst.<br>
-        💚 Pasadise Network – gemeinsam kreativ.
+        💚 Paradise Network – gemeinsam kreativ.
       </div>
     </section>
 
