FBU2 Pasadise part 3

--- a/infos.html
+++ b/infos.html
@@ -345,7 +345,7 @@
         onkeydown="if(event.key==='Enter'){window.location.href='bewerben.html'}"
         style="color:#388e3c; font-weight:bold; font-size:1.08rem; background:#e8f5e9; border-left-color:#43a047;"
         class="infos-box clickable cta">
-        ✅ Werde Teil von Pasadise Network!<br>
+        ✅ Werde Teil von Paradise Network!<br>
         Jetzt beitreten, bauen und Spaß haben!<br>
         ⛏️ Egal ob Solo-Spieler oder im Team – bei uns findest du deinen Platz.
       </div>
