FBU2 Pasadise part 5

--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -207,7 +207,7 @@
     <section class="card">
       <h2>👥 Über uns</h2>
       <div class="about-info-box">
-        <b>Pasadise Network – Ein Server von Spielern, für Spieler.</b><br>
+        <b>Paradise Network – Ein Server von Spielern, für Spieler.</b><br>
         Paradise Network ist weit mehr als nur ein Minecraft-Freebuildserver – wir sind eine wachsende, kreative Community mit dem Ziel, einen Ort zu schaffen, an dem sich Spieler aller Altersgruppen wohlfühlen, austauschen und langfristig verwirklichen können.<br><br>
         Gegründet wurde der Server aus dem Wunsch heraus, eine echte Alternative zu überladenen, kommerziellen Minecraft-Servern zu schaffen. Statt Pay-to-Win, Rangkämpfe und toxischem Verhalten findest du bei uns eine freundliche Atmosphäre, faire Regeln und vor allem: kreative Freiheit.
       </div>
@@ -219,7 +219,7 @@
           <li>🤝 Eine Community, in der jeder respektiert wird.</li>
           <li>🔧 Ein Server, der sich mit seinen Spielern weiterentwickelt.</li>
         </ul>
-        Pasadise steht für Zusammenhalt, Transparenz und Offenheit. Wir wollen keinen 08/15-Server, sondern ein lebendiges Projekt, das durch seine Spieler mitgestaltet wird.
+        Paradise steht für Zusammenhalt, Transparenz und Offenheit. Wir wollen keinen 08/15-Server, sondern ein lebendiges Projekt, das durch seine Spieler mitgestaltet wird.
       </div>
       <div class="about-info-box team">
         <b>🧑‍💻 Wer steckt dahinter?</b><br>
@@ -242,7 +242,7 @@
       <div class="about-info-box participate">
         <b>💬 Mitmachen & Mitgestalten</b><br>
         Bei uns bist du nicht einfach nur „Spieler“ – du bist Teil des Projekts. Deine Ideen sind willkommen, deine Meinung zählt.<br>
-        Ob als Architekt, Technik-Fan, Redstone-Genie oder einfach als Entdecker: Bei Pasadise findest du deinen Platz.
+        Ob als Architekt, Technik-Fan, Redstone-Genie oder einfach als Entdecker: Bei Paradise findest du deinen Platz.
       </div>
       <div style="color:#388e3c; font-weight:bold; font-size:1.08rem; margin-bottom:2.2rem;">
         Danke, dass du Teil dieser Welt bist – oder es bald wirst.<br>
