--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -275,7 +275,7 @@
         </div>
         
         <div class="team-member">
-          <img src="bild/team/pfeiltasten.png" alt="marvin">
+          <img src="bild/team/pfeiltasten.png" alt="Sr. Pfeiltasten">
           <h3>Pfeiltasten</h3>
           <div class="role">Sr.Developer</div>
           <p>"Text folgt..."</p>
@@ -311,7 +311,7 @@
 
         <div class="team-member">
           <img src="bild/team/HarryStudios.png" alt="HarryStudios">
-          <h3>HaryyStudios</h3>
+          <h3>HarryStudios</h3>
           <div class="role">Supporter</div>
           <p><i>"Text folgt..."</i></p>
         </div>
