--- a/raenge.html
+++ b/raenge.html
@@ -227,7 +227,19 @@
                 <span style="color: #ffd700; font-size: 1.1em;">&#9733;</span>
               </span><br>
               Das ist drinn:<br>
-              Beschreibung folgt ...</div>
+              - 5 Homes<br>
+              - /wb<br>
+              - /stonecutter<br>
+              - /cartographitable<br>
+              - /grindestone<br>
+              - /bloom<br>
+              - /smithingtable<br>
+              - spawner mit *silktouch abbauen<br>
+              - /sign alle 24h<br>
+              - Lotus Crate<br>
+              - 2 Länder<br>
+              - 250 Chunks Pro Land
+        </div>
       </div>
       <div class="rank-box viper">
         <span class="rank-box-glitter">
@@ -249,7 +261,22 @@
                 <span style="color: #ffd700; font-size: 1.1em;">&#9733;</span>
               </span><br>
               Das ist drinn:<br>
-              Beschreibung folgt ...</div>
+              - 10 Homes<br>
+              - /wb<br>
+              - /stonecutter<br>
+              - /cartographitable<br>
+              - /grindestone<br>
+              - /bloom<br>
+              - /smithingtable<br>
+              - spawner mit *silktouch abbauen<br>
+              - /sign alle 12h<br>
+              - Lotus Crate<br>
+              - Viper Crate<br>
+              - /back<br>
+              - 4 Länder<br>
+              - 350 Chunks Pro Land<br>
+              - 1x Monatlicher Biomänderantrag
+        </div>
       </div>
       <div class="rank-box vulkan">
         <span class="rank-box-glitter">
@@ -271,7 +298,25 @@
                 <span style="color: #ffd700; font-size: 1.1em;">&#9733;</span>
               </span><br>
               Das ist drinn:<br>
-              Beschreibung folgt ...</div>
+              - 20 Homes<br>
+              - /wb<br>
+              - /stonecutter<br>
+              - /cartographitable<br>
+              - /grindestone<br>
+              - /bloom<br>
+              - /smithingtable<br>
+              - spawner mit *silktouch abbauen<br>
+              - /sign unbegrenzt<br>
+              - Lotus Crate<br>
+              - Viper Crate<br>
+              - Vulcan Crate<br>
+              - /back<br>
+              - 8 Länder<br>
+              - 400 Chunks Pro Land<br>
+              - unbegrenzt Biomänderantrag<br>
+              - /ec<br>
+              - eigener /warp für 100k
+        </div>
       </div>
     </section>
     <!-- Vergleichstabelle der Ränge (Feature-Grid) -->
