--- a/raenge.html
+++ b/raenge.html
@@ -319,84 +319,159 @@
         </div>
       </div>
     </section>
-    <!-- Vergleichstabelle der Ränge (Feature-Grid) -->
-    <section class="ranks-compare-section" style="max-width:900px;margin:2rem auto 2.5rem auto;">
+    <!-- Vergleichsbereich der Ränge -->
+    <section class="ranks-compare-simple" style="max-width:900px;margin:2rem auto 2.5rem auto;">
       <h2 class="ranks-title" style="font-size:1.5rem;margin-bottom:1.2rem;">Rang-Vergleich</h2>
-      <div class="ranks-feature-grid-wrapper">
-        <div class="ranks-feature-grid">
-        <div class="rfg-header"></div>
-        <div class="rfg-header">
-          <span class="rfg-rank-img-wrapper">
-            <img src="bild/rang/lotus_rang.png" alt="Lotus" class="rfg-rankimg" />
-            <span class="rfg-rank-img-shine"></span>
-          </span>
-          <div class="rfg-rank lotus">Lotus</div>
-        </div>
-        <div class="rfg-header">
-          <span class="rfg-rank-img-wrapper">
-            <img src="bild/rang/viper_rang.png" alt="Viper" class="rfg-rankimg" />
-            <span class="rfg-rank-img-shine"></span>
-          </span>
-          <div class="rfg-rank viper">Viper</div>
-        </div>
-        <div class="rfg-header">
-          <span class="rfg-rank-img-wrapper">
-            <img src="bild/rang/vulkan_rang.png" alt="Vulcan" class="rfg-rankimg" />
-            <span class="rfg-rank-img-shine"></span>
-          </span>
-          <div class="rfg-rank vulkan">Vulcan</div>
-        </div>
-        <!-- Features -->
-        <div class="rfg-feature">Laufzeit</div>
-        <div class="rfg-cell">30 Tage</div>
-        <div class="rfg-cell" style="grid-column: span 2;">Permanent</div>
-        <div class="rfg-feature">Sign</div>
-        <div class="rfg-cell"><span class="rfg-check">✔</span> 1×/Woche</div>
-        <div class="rfg-cell rfg-cross">✖</div>
-        <div class="rfg-cell"><span class="rfg-check">✔</span> unbegrenzt</div>
-        <div class="rfg-feature">Skull</div>
-        <div class="rfg-cell rfg-cross">✖</div>
-        <div class="rfg-cell rfg-cross">✖</div>
-        <div class="rfg-cell"><span class="rfg-check">✔</span> (nicht für Spielerhandel)</div>
-        <div class="rfg-feature">Homes</div>
-        <div class="rfg-cell"><span class="rfg-check">✔</span> 5</div>
-        <div class="rfg-cell"><span class="rfg-check">✔</span> 10</div>
-        <div class="rfg-cell"><span class="rfg-check">✔</span> 15</div>
-        <div class="rfg-feature">Länder</div>
-        <div class="rfg-cell rfg-cross">✖</div>
-        <div class="rfg-cell"><span class="rfg-check">✔</span> 4</div>
-        <div class="rfg-cell"><span class="rfg-check">✔</span> 8</div>
-        <div class="rfg-feature">Chunks pro Land</div>
-        <div class="rfg-cell rfg-cross">✖</div>
-        <div class="rfg-cell"><span class="rfg-check">✔</span> 350</div>
-        <div class="rfg-cell rfg-cross">✖</div>
-        <div class="rfg-feature">Farbig schreiben</div>
-        <div class="rfg-cell"><span class="rfg-check">✔</span></div>
-        <div class="rfg-cell rfg-cross">✖</div>
-        <div class="rfg-cell"><span class="rfg-check">✔</span></div>
-        <div class="rfg-feature">Warp erstellen</div>
-        <div class="rfg-cell rfg-cross">✖</div>
-        <div class="rfg-cell rfg-cross">✖</div>
-        <div class="rfg-cell"><span class="rfg-check">✔</span> (100.000)</div>
-        <div class="rfg-feature">Biom ändern</div>
-        <div class="rfg-cell rfg-cross">✖</div>
-        <div class="rfg-cell"><span class="rfg-check">✔</span> 1×/Monat</div>
-        <div class="rfg-cell"><span class="rfg-check">✔</span> unbegrenzt</div>
-        <div class="rfg-feature">/anvil</div>
-        <div class="rfg-cell rfg-cross">✖</div>
-        <div class="rfg-cell"><span class="rfg-check">✔</span></div>
-        <div class="rfg-cell rfg-cross">✖</div>
-        <div class="rfg-feature">Spawner abbauen</div>
-        <div class="rfg-cell"><span class="rfg-check">✔</span> Silk Touch</div>
-        <div class="rfg-cell"><span class="rfg-check">✔</span> Silk Touch</div>
-        <div class="rfg-cell"><span class="rfg-check">✔</span> Behutsamkeit</div>
-        <div class="rfg-feature">Crate</div>
-        <div class="rfg-cell"><span class="rfg-check">✔</span> Lotus</div>
-        <div class="rfg-cell"><span class="rfg-check">✔</span> Viper</div>
-        <div class="rfg-cell"><span class="rfg-check">✔</span> Vulcan</div>
-        </div>
+      <div class="ranks-compare-table-wrapper" style="overflow-x:auto;">
+        <table class="ranks-compare-table" style="width:100%;border-collapse:collapse;">
+          <thead>
+            <tr style="background:#f7fafd;">
+              <th style="min-width:120px;"></th>
+              <th style="color:#388e3c;">
+                <img src="bild/rang/lotus_rang.png" alt="Lotus" style="height:32px;vertical-align:middle;">
+                <div style="font-weight:700;">Lotus</div>
+              </th>
+              <th style="color:#ef6c00;">
+                <img src="bild/rang/viper_rang.png" alt="Viper" style="height:32px;vertical-align:middle;">
+                <div style="font-weight:700;">Viper</div>
+              </th>
+              <th style="color:#c62828;">
+                <img src="bild/rang/vulkan_rang.png" alt="Vulcan" style="height:32px;vertical-align:middle;">
+                <div style="font-weight:700;">Vulcan</div>
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Laufzeit</td>
+              <td>30 Tage</td>
+              <td>Permanent</td>
+              <td>Permanent</td>
+            </tr>
+            <tr>
+              <td>Preis</td>
+              <td>250.000</td>
+              <td>950.000</td>
+              <td>3.000.000</td>
+            </tr>
+            <tr>
+              <td>Homes</td>
+              <td>5</td>
+              <td>10</td>
+              <td>20</td>
+            </tr>
+            <tr>
+              <td>Länder</td>
+              <td>2</td>
+              <td>4</td>
+              <td>8</td>
+            </tr>
+            <tr>
+              <td>Chunks pro Land</td>
+              <td>250</td>
+              <td>350</td>
+              <td>400</td>
+            </tr>
+            <tr>
+              <td>/sign</td>
+              <td>alle 24h</td>
+              <td>alle 12h</td>
+              <td>unbegrenzt</td>
+            </tr>
+            <tr>
+              <td>Crates</td>
+              <td>Lotus</td>
+              <td>Lotus, Viper</td>
+              <td>Lotus, Viper, Vulcan</td>
+            </tr>
+            <tr>
+              <td>/back</td>
+              <td style="color:#e53935;">&#10008;</td>
+              <td style="color:#43a047;">&#10004;</td>
+              <td style="color:#43a047;">&#10004;</td>
+            </tr>
+            <tr>
+              <td>Spawner mit Silk Touch</td>
+              <td style="color:#43a047;">&#10004;</td>
+              <td style="color:#43a047;">&#10004;</td>
+              <td style="color:#43a047;">&#10004;</td>
+            </tr>
+            <tr>
+              <td>Biomänderantrag</td>
+              <td style="color:#e53935;">&#10008;</td>
+              <td>1×/Monat</td>
+              <td>unbegrenzt</td>
+            </tr>
+            <tr>
+              <td>/ec</td>
+              <td style="color:#e53935;">&#10008;</td>
+              <td style="color:#e53935;">&#10008;</td>
+              <td style="color:#43a047;">&#10004;</td>
+            </tr>
+            <tr>
+              <td>Eigener /warp</td>
+              <td style="color:#e53935;">&#10008;</td>
+              <td style="color:#e53935;">&#10008;</td>
+              <td>für 100.000</td>
+            </tr>
+            <tr>
+              <td>Weitere Befehle</td>
+              <td>/wb, /stonecutter, /cartographitable, /grindestone, /bloom, /smithingtable</td>
+              <td>/wb, /stonecutter, /cartographitable, /grindestone, /bloom, /smithingtable</td>
+              <td>/wb, /stonecutter, /cartographitable, /grindestone, /bloom, /smithingtable</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </section>
+    <style>
+      /* Responsive Vergleichstabelle */
+      .ranks-compare-table th, .ranks-compare-table td {
+        padding: 0.6em 0.3em;
+        text-align: center;
+        font-size: 1rem;
+        border-bottom: 1px solid #e3eaf2;
+      }
+      .ranks-compare-table th {
+        background: #f7fafd;
+        font-size: 1.08rem;
+        font-weight: 700;
+      }
+      .ranks-compare-table td:first-child {
+        text-align: left;
+        font-weight: 600;
+        background: #f7fafd;
+        color: #1976d2;
+      }
+      @media (max-width: 700px) {
+        .ranks-compare-table th, .ranks-compare-table td {
+          font-size: 0.92rem;
+          padding: 0.38em 0.08em;
+        }
+        .ranks-compare-table th img {
+          height: 22px !important;
+        }
+      }
+      @media (max-width: 520px) {
+        .ranks-compare-table th, .ranks-compare-table td {
+          font-size: 0.82rem;
+          padding: 0.22em 0.03em;
+        }
+        .ranks-compare-table th img {
+          height: 16px !important;
+        }
+      }
+      .darkmode .ranks-compare-table th,
+      .darkmode .ranks-compare-table td {
+        background: #23272b;
+        color: #e3f2fd;
+        border-bottom: 1px solid #263238;
+      }
+      .darkmode .ranks-compare-table td:first-child {
+        background: #1e2936;
+        color: #4fc3f7;
+      }
+    </style>
   </main>
   <style>
     .ranks-feature-grid-wrapper {
@@ -465,138 +540,6 @@
       .scroll-to-top-btn span {
         font-size: 1.5rem;
       }
-    }
-    .ranks-feature-grid {
-      min-width: 600px;
-      display: grid;
-      grid-template-columns: 1.1fr 1fr 1fr 1fr;
-      background: #fff;
-      border-radius: 18px;
-      box-shadow: 0 2px 16px rgba(33,150,243,0.10);
-      overflow: hidden;
-      margin-bottom: 0;
-    }
-    .rfg-header {
-      background: #f7fafd;
-      text-align: center;
-      padding: 1.1em 0.5em 0.7em 0.5em;
-      font-weight: 900;
-      font-size: 1.13rem;
-      border-bottom: 2px solid #e3eaf2;
-      border-right: 1px solid #e3eaf2;
-    }
-    .rfg-header:last-child {
-      border-right: none;
-    }
-    .rfg-rank-img-wrapper {
-      display: inline-block;
-      position: relative;
-      width: 64px;
-      height: 64px;
-      margin-bottom: 0.18em;
-      vertical-align: middle;
-    }
-    .rfg-rankimg {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-      border-radius: 0;
-      box-shadow: none;
-      background: none;
-      position: relative;
-      z-index: 1;
-      aspect-ratio: 1/1;
-      display: block;
-    }
-    .rfg-rank-img-shine {
-      position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
-      pointer-events: none;
-      border-radius: inherit;
-      z-index: 2;
-      content: "";
-      display: block;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(120deg, rgba(255,255,255,0.0) 0%, rgba(255,255,255,0.55) 45%, rgba(255,255,255,0.0) 80%);
-      transform: translateX(-120%) skewX(-20deg);
-      animation: shiny-move 4.5s cubic-bezier(.4,.7,.7,1) infinite;
-      will-change: transform, opacity;
-    }
-    .rfg-rank {
-      font-size: 0.98em;
-      font-weight: 600;
-      margin-top: 0.13em;
-      letter-spacing: 0.01em;
-      text-shadow: 0 2px 8px #0001;
-      text-transform: uppercase;
-      opacity: 0.88;
-    }
-    .rfg-rank.lotus { color: #388e3c; }
-    .rfg-rank.viper { color: #ef6c00; }
-    .rfg-rank.vulkan { color: #c62828; }
-    .rfg-feature {
-      background: #f7fafd;
-      color: #1976d2;
-      font-weight: 700;
-      padding: 0.8em 0.7em;
-      border-bottom: 1px solid #e3eaf2;
-      border-right: 1px solid #e3eaf2;
-      min-width: 120px;
-      display: flex;
-      align-items: center;
-    }
-    .rfg-cell {
-      text-align: center;
-      padding: 0.8em 0.5em;
-      border-bottom: 1px solid #e3eaf2;
-      border-right: 1px solid #e3eaf2;
-      color: #23272b;
-      font-weight: 500;
-      background: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      min-height: 44px;
-    }
-    .rfg-cell:last-child, .rfg-feature:last-child {
-      border-right: none;
-    }
-    .rfg-check {
-      color: #43a047;
-      font-size: 1.15em;
-      font-weight: bold;
-      margin-right: 0.2em;
-    }
-    .rfg-cross {
-      color: #e53935;
-      font-size: 1.15em;
-      font-weight: bold;
-      justify-content: center;
-    }
-    @media (max-width: 900px) {
-      .ranks-feature-grid {
-        font-size: 0.97rem;
-        min-width: 520px;
-      }
-      .rfg-feature { min-width: 80px; }
-      .rfg-header, .rfg-cell, .rfg-feature { padding: 0.6em 0.2em; }
-    }
-    @media (max-width: 700px) {
-      .ranks-feature-grid {
-        font-size: 0.89rem;
-        min-width: 420px;
-      }
-      .rfg-header, .rfg-cell, .rfg-feature { padding: 0.38em 0.08em; }
-      .rfg-rank-img-wrapper { width: 38px; height: 38px; }
-    }
-    @media (max-width: 520px) {
-      .ranks-feature-grid {
-        font-size: 0.82rem;
-        min-width: 340px;
-      }
-      .rfg-header, .rfg-cell, .rfg-feature { padding: 0.22em 0.03em; }
-      .rfg-rank-img-wrapper { width: 26px; height: 26px; }
     }
     .darkmode .ranks-feature-grid {
       background: #23272b;
