--- a/raenge.html
+++ b/raenge.html
@@ -184,6 +184,11 @@
     .ranks-compare-table-wrapper {
       scrollbar-width: thin;
       scrollbar-color: #2196f3 #e3eaf2;
+      border-radius: 16px;
+      box-shadow: 0 2px 12px rgba(33,150,243,0.08);
+      background: none;
+      margin-bottom: 2.2rem;
+      padding-bottom: 0.5rem;
     }
     .ranks-compare-table-wrapper::-webkit-scrollbar {
       height: 10px;
@@ -210,6 +215,16 @@
     }
     .darkmode .ranks-compare-table-wrapper::-webkit-scrollbar-thumb:hover {
       background: #0288d1;
+    }
+    .ranks-compare-table {
+      border-radius: 16px;
+      overflow: hidden;
+      box-shadow: 0 2px 12px rgba(33,150,243,0.08);
+      background: #fff;
+    }
+    .darkmode .ranks-compare-table {
+      background: #23272b;
+      box-shadow: 0 2px 12px rgba(33,150,243,0.18);
     }
   </style>
 </head>
