--- a/raenge.html
+++ b/raenge.html
@@ -237,50 +237,124 @@
 
     /* Scrollbalken für Vergleichstabelle optisch anpassen */
     .ranks-compare-table-wrapper {
-      scrollbar-width: thin;
-      scrollbar-color: #2196f3 #e3eaf2;
-      border-radius: 16px;
-      box-shadow: 0 2px 12px rgba(33,150,243,0.08);
-      background: none;
-      margin-bottom: 2.2rem;
-      padding-bottom: 0.5rem;
-    }
-    .ranks-compare-table-wrapper::-webkit-scrollbar {
-      height: 10px;
-      background: #e3eaf2;
-      border-radius: 8px;
-    }
-    .ranks-compare-table-wrapper::-webkit-scrollbar-thumb {
-      background: #2196f3;
-      border-radius: 8px;
-      border: 2px solid #e3eaf2;
-    }
-    .ranks-compare-table-wrapper::-webkit-scrollbar-thumb:hover {
-      background: #1565c0;
-    }
-    .darkmode .ranks-compare-table-wrapper {
-      scrollbar-color: #4fc3f7 #23272b;
-    }
-    .darkmode .ranks-compare-table-wrapper::-webkit-scrollbar {
-      background: #23272b;
-    }
-    .darkmode .ranks-compare-table-wrapper::-webkit-scrollbar-thumb {
-      background: #4fc3f7;
-      border: 2px solid #23272b;
-    }
-    .darkmode .ranks-compare-table-wrapper::-webkit-scrollbar-thumb:hover {
-      background: #0288d1;
-    }
-    .ranks-compare-table {
-      border-radius: 16px;
-      overflow: hidden;
-      box-shadow: 0 2px 12px rgba(33,150,243,0.08);
-      background: #fff;
-    }
-    .darkmode .ranks-compare-table {
-      background: #23272b;
-      box-shadow: 0 2px 12px rgba(33,150,243,0.18);
-    }
+	/* wrapper kümmert sich um das Scrollen und die optischen Effekte */
+	overflow-x: auto;
+	-webkit-overflow-scrolling: touch;
+	scrollbar-width: thin;
+	scrollbar-color: #2196f3 #e3eaf2;
+	border-radius: 16px;
+	box-shadow: 0 2px 12px rgba(33,150,243,0.08);
+	background: none;
+	margin-bottom: 2.2rem;
+	padding-bottom: 0.5rem;
+}
+
+/* Scrollbar Styling (WebKit) */
+.ranks-compare-table-wrapper::-webkit-scrollbar {
+	height: 10px;
+	background: #e3eaf2;
+	border-radius: 8px;
+}
+.ranks-compare-table-wrapper::-webkit-scrollbar-thumb {
+	background: #2196f3;
+	border-radius: 8px;
+	border: 2px solid #e3eaf2;
+}
+.ranks-compare-table-wrapper::-webkit-scrollbar-thumb:hover {
+	background: #1565c0;
+}
+.darkmode .ranks-compare-table-wrapper {
+	scrollbar-color: #4fc3f7 #23272b;
+}
+.darkmode .ranks-compare-table-wrapper::-webkit-scrollbar {
+	background: #23272b;
+}
+.darkmode .ranks-compare-table-wrapper::-webkit-scrollbar-thumb {
+	background: #4fc3f7;
+	border: 2px solid #23272b;
+}
+.darkmode .ranks-compare-table-wrapper::-webkit-scrollbar-thumb:hover {
+	background: #0288d1;
+}
+
+/* Die Tabelle selbst darf kein overflow:hidden haben (sonst werden sticky Zellen abgeschnitten) */
+.ranks-compare-table {
+	width:100%;
+	border-collapse: collapse; /* stabile Darstellung */
+	/* entferne overflow:hidden / border-radius von der Tabelle, Wrapper übernimmt das */
+	box-shadow: none;
+	background: transparent;
+}
+
+/* Tabelle optisch abschließbar durch Wrapper */
+/* Optional: visuelle Karte für die Tabelle */
+.ranks-compare-table-container {
+	background: #fff;
+	border-radius: 16px;
+	overflow: visible;
+	box-shadow: 0 2px 12px rgba(33,150,243,0.08);
+}
+.darkmode .ranks-compare-table-container {
+	background: #23272b;
+	box-shadow: 0 2px 12px rgba(33,150,243,0.18);
+}
+
+/* Sticky erste Spalte (funktioniert auf Desktop & Mobil)
+   - top:0 für Header, left:0 zum kleben beim horizontalen scrollen
+   - z-index so setzen, dass Header über Body liegt, Body sticky über restl. Zellen
+*/
+.ranks-compare-table th.sticky-col,
+.ranks-compare-table td.sticky-col {
+	position: sticky;
+	left: 0;
+	white-space: nowrap;
+	background: #f7fafd;
+	z-index: 6; /* baseline für body-cells */
+	box-shadow: 6px 0 14px -8px rgba(0,0,0,0.12);
+}
+
+/* Header sticky (steht über den body-sticky) */
+.ranks-compare-table thead th.sticky-col {
+	top: 0;
+	z-index: 9;
+}
+
+/* Body-Zellen der ersten Spalte etwas darunter */
+.ranks-compare-table tbody td.sticky-col {
+	z-index: 7;
+}
+
+/* Darkmode Anpassung */
+.darkmode .ranks-compare-table th.sticky-col,
+.darkmode .ranks-compare-table td.sticky-col {
+	background: #1e2936;
+	color: #4fc3f7;
+	box-shadow: 6px 0 14px -8px rgba(0,0,0,0.5);
+}
+
+/* Mobile: erhöhe min-width der linken Spalte, damit lange Bezeichnungen nicht umbrechen */
+@media (max-width: 900px) {
+	.ranks-compare-table th.sticky-col,
+	.ranks-compare-table td.sticky-col {
+		min-width: 140px;
+		padding-right: 0.8rem;
+	}
+}
+
+/* Standard-Desktop-Fall (bewahrt bestehendes Aussehen, falls bereits definiert) */
+.ranks-compare-table th.sticky-col,
+.ranks-compare-table td.sticky-col {
+	/* ...existing code... */ 
+	/* fallback / bereits vorhandene Regeln werden hier nicht dupliziert */
+}
+
+/* Darkmode-Anpassung für die sticky-Spalte */
+.darkmode .ranks-compare-table th.sticky-col,
+.darkmode .ranks-compare-table td.sticky-col {
+	/* passend zum Darkmode-Hintergrund */
+	background: #1e2936;
+	box-shadow: 6px 0 14px -8px rgba(0,0,0,0.5);
+}
   </style>
 </head>
 <body>
@@ -642,6 +716,56 @@
         background: linear-gradient(180deg, #4b232333, #4b232344);
         border-left: 2px solid #e5393555;
       }
+
+      /* mobile-optimierte Sticky-First-Column */
+@media (max-width: 900px) {
+	.ranks-compare-table-wrapper {
+		-webkit-overflow-scrolling: touch; /* smoother scroll on iOS */
+	}
+
+	.ranks-compare-table {
+		border-collapse: separate; /* needed for stabile sticky Darstellung in manchen Browsern */
+	}
+
+	/* linke Spalte: sticky beim horizontalen Scrollen */
+	.ranks-compare-table th.sticky-col,
+	.ranks-compare-table td.sticky-col {
+		position: -webkit-sticky;
+		position: sticky;
+		left: 0;
+		min-width: 140px;            /* verhindert zu enge Labels */
+		white-space: nowrap;
+		background: #f7fafd;         /* heller Hintergrund für gute Lesbarkeit */
+		z-index: 6;                  /* überlagert die Tabellenzellen beim Scrollen */
+		box-shadow: 6px 0 14px -8px rgba(0,0,0,0.12);
+		transform: translateZ(0);    /* erschafft neue Stacking-Context */
+	}
+
+	/* sicherstellen, dass Header über Body-Zellen liegt */
+	.ranks-compare-table thead th.sticky-col {
+		top: 0;
+		z-index: 8;
+	}
+
+	.ranks-compare-table tbody td.sticky-col {
+		z-index: 7;
+	}
+}
+
+/* Standard-Desktop-Fall (bewahrt bestehendes Aussehen, falls bereits definiert) */
+.ranks-compare-table th.sticky-col,
+.ranks-compare-table td.sticky-col {
+	/* ...existing code... */ 
+	/* fallback / bereits vorhandene Regeln werden hier nicht dupliziert */
+}
+
+/* Darkmode-Anpassung für die sticky-Spalte */
+.darkmode .ranks-compare-table th.sticky-col,
+.darkmode .ranks-compare-table td.sticky-col {
+	/* passend zum Darkmode-Hintergrund */
+	background: #1e2936;
+	box-shadow: 6px 0 14px -8px rgba(0,0,0,0.5);
+}
 
       .ranks-compare-table th.sticky-col,
       .ranks-compare-table td.sticky-col {
