Allgemeiner feinschliff - Footer optimiert

--- a/events.html
+++ b/events.html
@@ -59,7 +59,7 @@
       </div>
       <!--  class="event-mc-day" title="End Event" data-event-title="End Event" data-event-desc="Vom 2. August bis zum 3. August finden großangelegte Wartungsarbeiten statt. Der Server ist in dieser Zeit möglicherweise nicht erreichbar." -->
       <div class="events-mc-calendar">
-        <h4><span style="font-family: 'Segoe UI Emoji', 'Noto Color Emoji', sans-serif;">📅</span> August 2025</h4>
+        <h4><span style="font-family: 'Segoe UI Emoji', 'Noto Color Emoji', sans-serif;">📅</span> November 2025</h4>
         <div class="calendar-table-wrapper">
           <table class="calendar-table-mc">
             <thead>
@@ -73,45 +73,45 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td></td>
                 <td>1</td>
-                <td class="event-mc-day maintenance-day" title="Wartungsarbeiten" data-event-title="Wartungsarbeiten" data-event-desc="Vom 2. August bis zum 3. August finden großangelegte Wartungsarbeiten statt. Der Server ist in dieser Zeit möglicherweise nicht erreichbar. Weitere Infos findest du im Discord &lt;span class='event-modal-link-btn'&gt;&lt;a href='https://discord.com/channels/1162749568551760002/1261405880164024390/1400229104413966366' target='_blank' rel='noopener'&gt;Mehr erfahren&lt;/a&gt;&lt;/span&gt;">2</td>
-                <td class="event-mc-day maintenance-day" title="Wartungsarbeiten" data-event-title="Wartungsarbeiten" data-event-desc="Vom 2. August bis zum 3. August finden großangelegte Wartungsarbeiten statt. Der Server ist in dieser Zeit möglicherweise nicht erreichbar. Weitere Infos findest du im Discord &lt;span class='event-modal-link-btn'&gt;&lt;a href='https://discord.com/channels/1162749568551760002/1261405880164024390/1400229104413966366' target='_blank' rel='noopener'&gt;Mehr erfahren&lt;/a&gt;&lt;/span&gt;">3</td>
+                <td>2</td>
               </tr>
               <tr>
+                <td>3</td>
                 <td>4</td>
                 <td>5</td>
                 <td>6</td>
                 <td>7</td>
                 <td>8</td>
                 <td>9</td>
-                <td>10</td>
               </tr>
               <tr>
+                <td>10</td>
                 <td>11</td>
                 <td>12</td>
                 <td>13</td>
                 <td>14</td>
                 <td>15</td>
                 <td>16</td>
-                <td>17</td>
               </tr>
               <tr>
+                <td>17</td>
                 <td>18</td>
                 <td>19</td>
                 <td>20</td>
                 <td>21</td>
                 <td>22</td>
                 <td>23</td>
-                <td>24</td>
               </tr>
               <tr>
+                <td>24</td>
                 <td>25</td>
                 <td>26</td>
                 <td>27</td>
                 <td>28</td>
                 <td>29</td>
                 <td>30</td>
-                <td>31</td>
               </tr>
             </tbody>
           </table>
@@ -172,8 +172,13 @@
     </section>
   </main>
   <footer>
-    <p>© 2025 ParadiseNetwork.us – Ein Projekt für die Community</p>
-  </footer>
+  <p>
+    © 2025 ParadiseNetwork.us – Alle Rechte vorbehalten.  
+    <a href="/impressum.html">Impressum</a> | 
+    <a href="https://paradisenetwork-store.tebex.io/Datenschutzerkl%C3%A4rung">Datenschutzerklärung</a> | 
+    <a href="https://paradisenetwork-store.tebex.io/AGB">AGB (Tebex-Shop)</a>
+  </p>
+</footer>
   <button class="scroll-to-top-btn" id="scrollToTopBtn" aria-label="Nach oben"><span style="pointer-events:none;">↑</span></button>
   <!-- Event-Info Modal -->
   <div id="eventModal" class="event-modal" style="display:none;">
