--- a/infos.html
+++ b/infos.html
@@ -116,6 +116,7 @@
       color: var(--primary, #2196f3);
       text-decoration: underline;
     }
+
     a:hover {
       color: #1976d2;
     }
@@ -334,7 +335,11 @@
           </li>
           <li>
             <a href="https://discord.com/channels/1162749568551760002/1267891349588283553" class="hero-cta" style="display:inline-block;min-width:200px;padding:0.7em 1.2em;background:#43a047;color:#fff;border-radius:7px;font-weight:bold;text-align:center;text-decoration:none;">
-              Support Mail
+              Ticket Support
+            </a>
+          <li>
+            <a href="support@paradisenetwork.us" class="hero-cta" style="display:inline-block;min-width:200px;padding:0.7em 1.2em;background:#43a047;color:#fff;border-radius:7px;font-weight:bold;text-align:center;text-decoration:none;">
+              Support email
             </a>
           </li>
         </ul>
@@ -352,8 +357,13 @@
     </section>
   </main>
   <footer>
-    <p>© 2025 ParadiseNetwork.us – Ein Projekt für die Community</p>
-  </footer>
+  <p>
+    © 2025 ParadiseNetwork.us – Alle Rechte vorbehalten.  
+    <a href="/impressum.html">Impressum</a> | 
+    <a href="https://paradisenetwork-store.tebex.io/Datenschutzerkl%C3%A4rung">Datenschutzerklärung</a> | 
+    <a href="https://paradisenetwork-store.tebex.io/AGB">AGB (Tebex-Shop)</a>
+  </p>
+</footer>
   <button class="scroll-to-top-btn" id="scrollToTopBtn" aria-label="Nach oben"><span style="pointer-events:none;">↑</span></button>
   <script>
     // Darkmode persistent über localStorage
