--- a/bewerben.html
+++ b/bewerben.html
@@ -6,7 +6,13 @@
   <title>Bewerben – ParadiseNetwork.us</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    /* ...existing code... */
+a {
+    color: var(--primary, #2196f3);
+    text-decoration: underline;
+}
+
+}
+
     .scroll-to-top-btn {
       position: fixed;
       right: 2.2rem;
@@ -89,8 +95,14 @@
     </section>
   </main>
   <footer>
-    <p>© 2025 ParadiseNetwork.us – Ein Projekt für die Community</p>
-  </footer>
+  <p>
+    © 2025 ParadiseNetwork.us – Alle Rechte vorbehalten.  
+    <a href="/impressum.html">Impressum</a> | 
+    <a href="https://paradisenetwork-store.tebex.io/Datenschutzerkl%C3%A4rung">Datenschutzerklärung</a> | 
+    <a href="https://paradisenetwork-store.tebex.io/AGB">AGB (Tebex-Shop)</a>
+  </p>
+</footer>
+
   <button class="scroll-to-top-btn" id="scrollToTopBtn" aria-label="Nach oben"><span style="pointer-events:none;">↑</span></button>
   <script>
     // Darkmode persistent über localStorage
