--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>ParadiseNetwork.us</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    /* ...existing code... */
     .scroll-to-top-btn {
       position: fixed;
       right: 2.2rem;
@@ -40,6 +39,12 @@
       background: #0288d1;
       color: #fff;
     }
+
+    a {
+    color: var(--primary, #2196f3);
+    text-decoration: underline;
+}
+
     @media (max-width: 600px) {
       .scroll-to-top-btn {
         right: 1rem;
@@ -226,8 +231,13 @@
   </main>
 
   <footer>
-    <p>© 2025 ParadiseNetwork.us – Ein Projekt für die Community</p>
-  </footer>
+  <p>
+    © 2025 ParadiseNetwork.us – Alle Rechte vorbehalten.  
+    <a href="/impressum.html">Impressum</a> | 
+    <a href="https://paradisenetwork-store.tebex.io/Datenschutzerkl%C3%A4rung">Datenschutzerklärung</a> | 
+    <a href="https://paradisenetwork-store.tebex.io/AGB">AGB (Tebex-Shop)</a>
+  </p>
+</footer>
 
   <button class="scroll-to-top-btn" id="scrollToTopBtn" aria-label="Nach oben"><span style="pointer-events:none;">↑</span></button>
 
