--- a/social.html
+++ b/social.html
@@ -229,8 +229,13 @@
     </section>
   </main>
   <footer>
-    <p>© 2025 ParadiseNetwork.us – Ein Projekt für die Community</p>
-  </footer>
+  <p>
+    © 2025 ParadiseNetwork.us – Alle Rechte vorbehalten.  
+    <a href="/impressum.html">Impressum</a> | 
+    <a href="https://paradisenetwork-store.tebex.io/Datenschutzerkl%C3%A4rung">Datenschutzerklärung</a> | 
+    <a href="https://paradisenetwork-store.tebex.io/AGB">AGB (Tebex-Shop)</a>
+  </p>
+</footer>
   <button class="scroll-to-top-btn" id="scrollToTopBtn" aria-label="Nach oben"><span style="pointer-events:none;">↑</span></button>
   <script>
     // Darkmode persistent über localStorage
