--- a/vote.html
+++ b/vote.html
@@ -108,8 +108,13 @@
     </section>
   </main>
   <footer>
-    <p>© 2025 ParadiseNetwork.us – Ein Projekt für die Community</p>
-  </footer>
+  <p>
+    © 2025 ParadiseNetwork.us – Alle Rechte vorbehalten.  
+    <a href="/impressum.html">Impressum</a> | 
+    <a href="https://paradisenetwork-store.tebex.io/Datenschutzerkl%C3%A4rung">Datenschutzerklärung</a> | 
+    <a href="https://paradisenetwork-store.tebex.io/AGB">AGB (Tebex-Shop)</a>
+  </p>
+</footer>
   <script>
     // Darkmode persistent über localStorage
     function toggleDarkMode() {
