--- a/events.html
+++ b/events.html
@@ -57,7 +57,7 @@
           </div>
         </div>
       </div>
-      <!--  class="event-mc-day" title="End Event" data-event-title="End Event" data-event-desc="Vom 2. August bis zum 3. August finden großangelegte Wartungsarbeiten statt. Der Server ist in dieser Zeit möglicherweise nicht erreichbar." -->
+      <!--  class="event-mc-day" title="Event" data-event-title="Event" data-event-desc="Beschreibung für info" -->
       <div class="events-mc-calendar">
         <h4><span style="font-family: 'Segoe UI Emoji', 'Noto Color Emoji', sans-serif;">📅</span> November 2025</h4>
         <div class="calendar-table-wrapper">
@@ -268,7 +268,7 @@
     });
   </script>
   <style>
-    /* ...existing code... */
+    
     .event-modal-link-btn a {
       display: inline-block;
       background: #ffe066;
@@ -375,7 +375,20 @@
       from { transform: translateY(30px); opacity: 0; }
       to { transform: translateY(0); opacity: 1; }
     }
-    /* ...existing code... */
   </style>
+<!--
+//       ______
+//      / ____/
+//     / /
+//    / /
+//   / /
+//  / /____
+// /______/
+// PPPPPP    AAAAAA   RRRRRR    AAAAAA   DDDDDD   IIIIIIII   SSSSSS   EEEEEEEE
+// P    P   A    A   R    R   A    A   D    D      II     S        E
+// PPPPPP   AAAAAA   RRRRRR   AAAAAA   D    D      II      SSSSSS  EEEEEEEE
+// P       A    A   R R     A    A   D    D      II           S  E
+// P       A    A   R  R    A    A   DDDDDD   IIIIIIII   SSSSSS   EEEEEEEE
+-->
 </body>
 </html>
