--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -324,11 +324,9 @@
         </div>
 
     </section>
-    <!-- ...weitere Abschnitte wie Geschichte, Werte etc... -->
     <section class="card" style="cursor:pointer;" onclick="window.location.href='geschichte.html'" tabindex="0" onkeydown="if(event.key==='Enter'){window.location.href='geschichte.html'}">
       <h2>Die Geschichte von ParadiseNetwork</h2>
       <p style="color:#888;">Klicke hier und entdecke die Geschichte von ParadiseNetwork.us</p>
-      <!-- Teamvorstellung, Geschichte, Werte etc. -->
     </section>
   </main>
   <footer>
@@ -401,6 +399,18 @@
     scrollBtn.addEventListener('click', function() {
       window.scrollTo({top: 0, behavior: 'smooth'});
     });
+//       ______
+//      / ____/
+//     / /
+//    / /
+//   / /
+//  / /____
+// /______/
+// PPPPPP    AAAAAA   RRRRRR    AAAAAA   DDDDDD   IIIIIIII   SSSSSS   EEEEEEEE
+// P    P   A    A   R    R   A    A   D    D      II     S        E
+// PPPPPP   AAAAAA   RRRRRR   AAAAAA   D    D      II      SSSSSS  EEEEEEEE
+// P       A    A   R R     A    A   D    D      II           S  E
+// P       A    A   R  R    A    A   DDDDDD   IIIIIIII   SSSSSS   EEEEEEEE
   </script>
 </body>
 </html>
