--- a/guides.html
+++ b/guides.html
@@ -231,7 +231,7 @@
           <ul>
             Bald verfügbar
           </ul>
-<!-- Hier können PDF-Links oder andere Ressourcen hinzugefügt werden 
+<!-- Hier können PDF-Links oder andere Ressourcen hinzugefügt werden falls man bock hat
           <ul>
             <li><a href="#">PDF: Serverregeln</a></li>
             <li><a href="#">PDF: Grundstück-Guide</a></li>
@@ -355,6 +355,18 @@
     scrollBtn.addEventListener('click', function() {
       window.scrollTo({top: 0, behavior: 'smooth'});
     });
+//       ______
+//      / ____/
+//     / /
+//    / /
+//   / /
+//  / /____
+// /______/
+// PPPPPP    AAAAAA   RRRRRR    AAAAAA   DDDDDD   IIIIIIII   SSSSSS   EEEEEEEE
+// P    P   A    A   R    R   A    A   D    D      II     S        E
+// PPPPPP   AAAAAA   RRRRRR   AAAAAA   D    D      II      SSSSSS  EEEEEEEE
+// P       A    A   R R     A    A   D    D      II           S  E
+// P       A    A   R  R    A    A   DDDDDD   IIIIIIII   SSSSSS   EEEEEEEE
   </script>
 </body>
 </html>
