--- a/karte.html
+++ b/karte.html
@@ -6,7 +6,7 @@
   <title>Karte – ParadiseNetwork.us</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    /* ...existing code... */
+
     .scroll-to-top-btn {
       position: fixed;
       right: 2.2rem;
@@ -49,7 +49,7 @@
         font-size: 1.5rem;
       }
     }
-    /* ...existing code... */
+
   </style>
 </head>
 <body>
@@ -150,6 +150,18 @@
     scrollBtn.addEventListener('click', function() {
       window.scrollTo({top: 0, behavior: 'smooth'});
     });
+//       ______
+//      / ____/
+//     / /
+//    / /
+//   / /
+//  / /____
+// /______/
+// PPPPPP    AAAAAA   RRRRRR    AAAAAA   DDDDDD   IIIIIIII   SSSSSS   EEEEEEEE
+// P    P   A    A   R    R   A    A   D    D      II     S        E
+// PPPPPP   AAAAAA   RRRRRR   AAAAAA   D    D      II      SSSSSS  EEEEEEEE
+// P       A    A   R R     A    A   D    D      II           S  E
+// P       A    A   R  R    A    A   DDDDDD   IIIIIIII   SSSSSS   EEEEEEEE
   </script>
 </body>
 </html>
