--- a/raenge.html
+++ b/raenge.html
@@ -171,7 +171,7 @@
       0%, 100% { transform: scale(1) rotate(0deg); opacity: 0.7; }
       50% { transform: scale(1.5) rotate(20deg); opacity: 1; }
     }
-    /* Key-Rain Animation statt normaler Key-Animation */
+    /* Key-Rain Animation */
     .rank-key-rain {
       position: absolute;
       top: 0;
@@ -281,13 +281,12 @@
 .ranks-compare-table {
 	width:100%;
 	border-collapse: collapse; /* stabile Darstellung */
-	/* entferne overflow:hidden / border-radius von der Tabelle, Wrapper übernimmt das */
+/* Wrapper übernimmt das */
 	box-shadow: none;
 	background: transparent;
 }
 
 /* Tabelle optisch abschließbar durch Wrapper */
-/* Optional: visuelle Karte für die Tabelle */
 .ranks-compare-table-container {
 	background: #fff;
 	border-radius: 16px;
@@ -299,10 +298,7 @@
 	box-shadow: 0 2px 12px rgba(33,150,243,0.18);
 }
 
-/* Sticky erste Spalte (funktioniert auf Desktop & Mobil)
-   - top:0 für Header, left:0 zum kleben beim horizontalen scrollen
-   - z-index so setzen, dass Header über Body liegt, Body sticky über restl. Zellen
-*/
+/* Sticky erste Spalte (funktioniert auf Desktop & Mobil) */
 .ranks-compare-table th.sticky-col,
 .ranks-compare-table td.sticky-col {
 	position: sticky;
@@ -313,7 +309,7 @@
 	box-shadow: 6px 0 14px -8px rgba(0,0,0,0.12);
 }
 
-/* Header sticky (steht über den body-sticky) */
+/* Header sticky */
 .ranks-compare-table thead th.sticky-col {
 	top: 0;
 	z-index: 9;
@@ -332,7 +328,7 @@
 	box-shadow: 6px 0 14px -8px rgba(0,0,0,0.5);
 }
 
-/* Mobile: erhöhe min-width der linken Spalte, damit lange Bezeichnungen nicht umbrechen */
+/* Mobile */
 @media (max-width: 900px) {
 	.ranks-compare-table th.sticky-col,
 	.ranks-compare-table td.sticky-col {
@@ -341,7 +337,7 @@
 	}
 }
 
-/* Standard-Desktop-Fall (bewahrt bestehendes Aussehen, falls bereits definiert) */
+/* Standard-Desktop-Fall */
 .ranks-compare-table th.sticky-col,
 .ranks-compare-table td.sticky-col { 
 }
@@ -349,7 +345,7 @@
 /* Darkmode-Anpassung für die sticky-Spalte */
 .darkmode .ranks-compare-table th.sticky-col,
 .darkmode .ranks-compare-table td.sticky-col {
-	/* passend zum Darkmode-Hintergrund */
+	/* Darkmode-Hintergrund minset */
 	background: #1e2936;
 	box-shadow: 6px 0 14px -8px rgba(0,0,0,0.5);
 }
@@ -718,28 +714,27 @@
       /* mobile-optimierte Sticky-First-Column */
 @media (max-width: 900px) {
 	.ranks-compare-table-wrapper {
-		-webkit-overflow-scrolling: touch; /* smoother scroll on iOS */
+		-webkit-overflow-scrolling: touch; /* smoother scroll bei iOS */
 	}
 
 	.ranks-compare-table {
-		border-collapse: separate; /* needed for stabile sticky Darstellung in manchen Browsern */
+		border-collapse: separate; /* browser opti für sticky */
 	}
 
-	/* linke Spalte: sticky beim horizontalen Scrollen */
+	/* linke Spalte */
 	.ranks-compare-table th.sticky-col,
 	.ranks-compare-table td.sticky-col {
 		position: -webkit-sticky;
 		position: sticky;
 		left: 0;
-		min-width: 140px;            /* verhindert zu enge Labels */
+		min-width: 140px;
 		white-space: nowrap;
-		background: #f7fafd;         /* heller Hintergrund für gute Lesbarkeit */
-		z-index: 6;                  /* überlagert die Tabellenzellen beim Scrollen */
+		background: #f7fafd;
+		z-index: 6;
 		box-shadow: 6px 0 14px -8px rgba(0,0,0,0.12);
-		transform: translateZ(0);    /* erschafft neue Stacking-Context */
+		transform: translateZ(0);
 	}
 
-	/* sicherstellen, dass Header über Body-Zellen liegt */
 	.ranks-compare-table thead th.sticky-col {
 		top: 0;
 		z-index: 8;
@@ -750,17 +745,15 @@
 	}
 }
 
-/* Standard-Desktop-Fall (bewahrt bestehendes Aussehen, falls bereits definiert) */
+/* Standard-Desktop-Fall */
 .ranks-compare-table th.sticky-col,
 .ranks-compare-table td.sticky-col {
-	/* ...existing code... */ 
-	/* fallback / bereits vorhandene Regeln werden hier nicht dupliziert */
 }
 
-/* Darkmode-Anpassung für die sticky-Spalte */
+/* Darkmode-Anpassung sticky-Spalte */
 .darkmode .ranks-compare-table th.sticky-col,
 .darkmode .ranks-compare-table td.sticky-col {
-	/* passend zum Darkmode-Hintergrund */
+	/* Darkmode-Hintergrund */
 	background: #1e2936;
 	box-shadow: 6px 0 14px -8px rgba(0,0,0,0.5);
 }
@@ -937,6 +930,18 @@
     });
     window.addEventListener('resize', closeNavOnResize);
     window.addEventListener('DOMContentLoaded', closeNavOnResize);
+//       ______
+//      / ____/
+//     / /
+//    / /
+//   / /
+//  / /____
+// /______/
+// PPPPPP    AAAAAA   RRRRRR    AAAAAA   DDDDDD   IIIIIIII   SSSSSS   EEEEEEEE
+// P    P   A    A   R    R   A    A   D    D      II     S        E
+// PPPPPP   AAAAAA   RRRRRR   AAAAAA   D    D      II      SSSSSS  EEEEEEEE
+// P       A    A   R R     A    A   D    D      II           S  E
+// P       A    A   R  R    A    A   DDDDDD   IIIIIIII   SSSSSS   EEEEEEEE
   </script>
 </body>
 </html>
