--- a/infos.html
+++ b/infos.html
@@ -338,10 +338,12 @@
               Ticket Support
             </a>
           <li>
-            <a href="support@paradisenetwork.us" class="hero-cta" style="display:inline-block;min-width:200px;padding:0.7em 1.2em;background:#43a047;color:#fff;border-radius:7px;font-weight:bold;text-align:center;text-decoration:none;">
-              Support email
-            </a>
-          </li>
+        <a href="mailto:support@paradisenetwork.us?subject=Supportanfrage%20-%20ParadiseNetwork&body=Minecraftname:%0ADiscordname:%0ABeschreibung:%20(Wie%20k%C3%B6nnen%20wir%20helfen%3F)%0A%0A" 
+          class="hero-cta" 
+          style="display:inline-block;min-width:200px;padding:0.7em 1.2em;background:#43a047;color:#fff;border-radius:7px;font-weight:bold;text-align:center;text-decoration:none;">
+          Support E-Mail senden
+         </a>
+        </li>
         </ul>
       </div>
       <div class="infos-box clickable"
