--- a/creator.html
+++ b/creator.html
@@ -10,6 +10,10 @@ a {
     color: var(--primary, #2196f3);
     text-decoration: underline;
 }
+footer {
+    padding: 20px 0;
+    text-align: center;
+}
     .creator-list {
       display: flex;
       flex-wrap: wrap;
