--- a/geschichte.html
+++ b/geschichte.html
@@ -17,6 +17,10 @@
       font-size: 1.09rem;
       color: #23272b;
     }
+    footer {
+    padding: 20px 0;
+    text-align: center;
+}
     .history-section h1 {
       margin-top: 0;
       font-size: 2rem;
