--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       justify-content: center;
       transition: opacity 0.2s, background 0.2s;
     }
+    footer {
+    padding: 20px 0;
+    text-align: center;
+}
     .scroll-to-top-btn:hover, .scroll-to-top-btn:focus {
       opacity: 1;
       background: #1976d2;
