--- a/infos.html
+++ b/infos.html
@@ -16,6 +16,10 @@
       font-size: 1.09rem;
       color: #23272b;
     }
+    footer {
+    padding: 20px 0;
+    text-align: center;
+}
     .infos-box {
       background: #f9f9f9;
       border-radius: 10px;
