--- a/karte.html
+++ b/karte.html
@@ -6,7 +6,19 @@
   <title>Karte – ParadiseNetwork.us</title>
   <link rel="stylesheet" href="style.css" />
   <style>
+    html, body {
+  height: 100%;
+  margin: 0;
+}
 
+  body {
+  display: flex;
+  flex-direction: column;
+}
+
+  main {
+  flex: 1;
+}
     .scroll-to-top-btn {
       position: fixed;
       right: 2.2rem;
