--- a/social.html
+++ b/social.html
@@ -15,6 +15,10 @@
       padding: 0;
       list-style: none;
     }
+    footer {
+    padding: 20px 0;
+    text-align: center;
+}
     .social-link-card {
       background: #f9f9f9;
       border-radius: 10px;
