--- a/vote.html
+++ b/vote.html
@@ -21,6 +21,20 @@
       text-shadow: 0 2px 8px rgba(33,150,243,0.10);
       text-transform: uppercase;
     }
+    footer {
+    padding: 22px 0;
+    text-align: center;
+    }
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
+}
+
     .darkmode .vote-title {
       color: #90caf9;
       text-shadow: 0 2px 8px rgba(33,150,243,0.18);
