--- a/bewerben.html
+++ b/bewerben.html
@@ -6,6 +6,10 @@
   <title>Bewerben – ParadiseNetwork.us</title>
   <link rel="stylesheet" href="style.css" />
   <style>
+    footer {
+    padding: 20px 0;
+    text-align: center;
+}
       .scroll-to-top-btn {
       position: fixed;
       right: 2.2rem;
