--- a/galerie.html
+++ b/galerie.html
@@ -10,6 +10,16 @@
       max-width: 900px;
       margin: 2rem auto;
     }
+    footer {
+background-color: #2c3e50;
+    padding: 20px 0;
+    text-align: center;
+}
+
+a {
+    color: var(--primary, #2196f3);
+    text-decoration: underline;
+}
     .gallery-folder {
       background: #f5f5f5;
       border-radius: 8px;
