--- a/raenge.html
+++ b/raenge.html
@@ -11,6 +11,10 @@
       margin: 0;
       font-family: 'Segoe UI', Arial, sans-serif;
     }
+    footer {
+    padding: 20px 0;
+    text-align: center;
+}
     .ranks-title {
       text-align: center;
       font-size: 2.2rem;
