--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -13,6 +13,10 @@
       justify-content: center;
       margin: 2rem 0;
     }
+    footer {
+    padding: 20px 0;
+    text-align: center;
+}
     .team-member {
       background: #f5f5f5;
       border-radius: 10px;
