--- a/karte.html
+++ b/karte.html
@@ -6,18 +6,9 @@
   <title>Karte – ParadiseNetwork.us</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    html, body {
-  height: 100%;
-  margin: 0;
-}
-
-  body {
-  display: flex;
-  flex-direction: column;
-}
-
-  main {
-  flex: 1;
+    footer {
+    padding: 20px 0;
+    text-align: center;
 }
     .scroll-to-top-btn {
       position: fixed;
