--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -261,7 +261,7 @@
           <img src="bild/team/derder96-2.png" alt="derder96">
           <h3>derder96</h3>
           <div class="role">Owner</div>
-          <p>"Text folgt..."</p>
+          <p>"Ich bin der erste Teamler meines Servers"</p>
         </div>
 
         <div class="team-member">
@@ -273,23 +273,23 @@
       
         <div class="team-member">
           <img src="bild/team/leonie.jpg" alt="Leonie">
-          <h3>Leonie</h3>
+          <h3>KiragoPV</h3>
           <div class="role">Co-Owner</div>
-          <p>"Text folgt..."</p>
+          <p>"Keine Ahnung Bro, frag einfach Chat, hab ich auch grad"</p>
         </div>
         
         <div class="team-member">
           <img src="bild/team/pfeiltasten.png" alt="Sr. Pfeiltasten">
           <h3>Pfeiltasten</h3>
           <div class="role">Sr.Developer</div>
-          <p>"Text folgt..."</p>
+          <p>"Bug gefunden. Ursache ebenfalls. Ich gehe trotzdem erstmal essen."</p>
         </div>
 
         <div class="team-member">
           <img src="bild/team/Marvin.png" alt="Marvin">
           <h3>Marvin</h3>
           <div class="role">Developer</div>
-          <p>"Text folgt..."</p>
+          <p>"Etwas klappt nicht, erstmal Neustarten! Ansonsten TICKET!."</p>
         </div>
 
         <div class="team-member">
