--- a/guides.html
+++ b/guides.html
@@ -141,6 +141,11 @@
     <h1>Guides & Hilfe</h1>
     <p>Praktische Tutorials, Hilfestellungen für dein Abenteuer.</p>
   </header>
+
+  <div class="logo-container">
+    <img src="bild/paradi:logo.png" alt="ParadiseNetwork Logo">
+  </div>
+
   <nav id="mainNav" class="collapsed">
     <a href="index.html">Startseite</a>
     <a href="infos.html">Infos</a>
