--- a/galerie.html
+++ b/galerie.html
@@ -306,6 +306,11 @@ a {
     <h1>Galerie</h1>
     <p>Erkunde die schönsten Bilder aus dem Paradise Universum.</p>
   </header>
+
+  <div class="logo-container">
+    <img src="bild/paradi_logo.png" alt="ParadiseNetwork Logo">
+  </div>
+
   <nav id="mainNav" class="collapsed">
     <a href="index.html">Startseite</a>
     <a href="infos.html">Infos</a>
@@ -426,19 +431,24 @@ a {
     if (localStorage.getItem('darkmode') === '1') {
       document.body.classList.add('darkmode');
     }
+    // Responsive Navigation
     const hamburger = document.getElementById('hamburger');
     const nav = document.getElementById('mainNav');
+
     function closeNavOnResize() {
       if (window.innerWidth > 900) {
+        // Desktop: Navigation ist sichtbar ohne Klassen
         nav.classList.remove('expanded');
         nav.classList.remove('collapsed');
         hamburger.classList.remove('active');
       } else {
+        // Mobile: Navigation ist versteckt mit 'collapsed'
         nav.classList.add('collapsed');
         nav.classList.remove('expanded');
         hamburger.classList.remove('active');
       }
     }
+
     hamburger.addEventListener('click', function() {
       if (nav.classList.contains('expanded')) {
         nav.classList.remove('expanded');
@@ -450,6 +460,8 @@ a {
         hamburger.classList.add('active');
       }
     });
+
+    // Schließe Menü beim Klick auf Link (nur mobil)
     nav.querySelectorAll('a').forEach(link => {
       link.addEventListener('click', () => {
         if (window.innerWidth <= 900) {
@@ -459,6 +471,7 @@ a {
         }
       });
     });
+
     window.addEventListener('resize', closeNavOnResize);
     window.addEventListener('DOMContentLoaded', closeNavOnResize);
 
