--- a/raenge.html
+++ b/raenge.html
@@ -364,6 +364,11 @@
     <h1>Willkommen zu ParadiseNetwork</h1>
     <p>Dein Deutscher Minecraft Freebuild Server – ParadiseNetwork.us</p>
   </header>
+
+  <div class="logo-container">
+    <img src="bild/paradi_logo.png" alt="ParadiseNetwork Logo">
+  </div>
+
   <nav id="mainNav" class="collapsed">
     <a href="index.html">Startseite</a>
     <a href="infos.html">Infos</a>
@@ -899,19 +904,24 @@
     scrollBtn.addEventListener('click', function() {
       window.scrollTo({top: 0, behavior: 'smooth'});
     });
+    // Responsive Navigation
     const hamburger = document.getElementById('hamburger');
     const nav = document.getElementById('mainNav');
+
     function closeNavOnResize() {
       if (window.innerWidth > 900) {
+        // Desktop: Navigation ist sichtbar ohne Klassen
         nav.classList.remove('expanded');
         nav.classList.remove('collapsed');
         hamburger.classList.remove('active');
       } else {
+        // Mobile: Navigation ist versteckt mit 'collapsed'
         nav.classList.add('collapsed');
         nav.classList.remove('expanded');
         hamburger.classList.remove('active');
       }
     }
+
     hamburger.addEventListener('click', function() {
       if (nav.classList.contains('expanded')) {
         nav.classList.remove('expanded');
@@ -923,6 +933,8 @@
         hamburger.classList.add('active');
       }
     });
+
+    // Schließe Menü beim Klick auf Link (nur mobil)
     nav.querySelectorAll('a').forEach(link => {
       link.addEventListener('click', () => {
         if (window.innerWidth <= 900) {
@@ -932,6 +944,7 @@
         }
       });
     });
+
     window.addEventListener('resize', closeNavOnResize);
     window.addEventListener('DOMContentLoaded', closeNavOnResize);
 //       ______
