--- a/vote.html
+++ b/vote.html
@@ -78,6 +78,11 @@
     <h1>Willkommen zu ParadiseNetwork</h1>
     <p>Dein Deutscher Minecraft Freebuild Server – ParadiseNetwork.us</p>
   </header>
+
+  <div class="logo-container">
+    <img src="bild/paradi_logo.png" alt="ParadiseNetwork Logo">
+  </div>
+
   <nav id="mainNav" class="collapsed">
     <a href="index.html">Startseite</a>
     <a href="infos.html">Infos</a>
@@ -130,19 +135,24 @@
       document.body.classList.add('darkmode');
     }
     // Responsive Navigation
+    // Responsive Navigation
     const hamburger = document.getElementById('hamburger');
     const nav = document.getElementById('mainNav');
+
     function closeNavOnResize() {
       if (window.innerWidth > 900) {
+        // Desktop: Navigation ist sichtbar ohne Klassen
         nav.classList.remove('expanded');
         nav.classList.remove('collapsed');
         hamburger.classList.remove('active');
       } else {
+        // Mobile: Navigation ist versteckt mit 'collapsed'
         nav.classList.add('collapsed');
         nav.classList.remove('expanded');
         hamburger.classList.remove('active');
       }
     }
+
     hamburger.addEventListener('click', function() {
       if (nav.classList.contains('expanded')) {
         nav.classList.remove('expanded');
@@ -154,6 +164,8 @@
         hamburger.classList.add('active');
       }
     });
+
+    // Schließe Menü beim Klick auf Link (nur mobil)
     nav.querySelectorAll('a').forEach(link => {
       link.addEventListener('click', () => {
         if (window.innerWidth <= 900) {
@@ -163,6 +175,7 @@
         }
       });
     });
+
     window.addEventListener('resize', closeNavOnResize);
     window.addEventListener('DOMContentLoaded', closeNavOnResize);
 //       ______
