--- a/raenge.html
+++ b/raenge.html
@@ -6,15 +6,11 @@
   <title>ParadiseNetwork – Ränge</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    body {
-      background: #f7fafd;
-      margin: 0;
-      font-family: 'Segoe UI', Arial, sans-serif;
-    }
     footer {
-    padding: 20px 0;
-    text-align: center;
-}
+      padding: 1rem;
+      width: 100%;
+      box-sizing: border-box;
+    }
     .ranks-title {
       text-align: center;
       font-size: 2.2rem;
@@ -927,10 +923,14 @@
         nav.classList.remove('expanded');
         nav.classList.add('collapsed');
         hamburger.classList.remove('active');
+        document.body.classList.remove('nav-open');
       } else {
         nav.classList.add('expanded');
         nav.classList.remove('collapsed');
         hamburger.classList.add('active');
+        document.body.classList.add('nav-open');
+        // Scroll navigation to top when opened
+        nav.scrollTop = 0;
       }
     });
 
